// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl - Label and Caption for controls StyledCaption - basic render: StyledCaption has correct default styles 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "marginBottom": "$theme.sizing.scale300",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "$theme.sizing.scale300",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
}
`;

exports[`FormControl - Label and Caption for controls StyledCaption - basic render: StyledCaption has correct styles when compact and error is boolean 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "marginBottom": "$theme.sizing.scale300",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "$theme.sizing.scale300",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
}
`;

exports[`FormControl - Label and Caption for controls StyledCaption - basic render: StyledCaption has correct styles when error is a string 1`] = `
Object {
  "color": "$theme.colors.negative400",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "marginBottom": "$theme.sizing.scale300",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "$theme.sizing.scale300",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
}
`;

exports[`FormControl - Label and Caption for controls StyledLabel - basic render: StyledLabel has correct default styles 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "cursor": "auto",
  "display": "block",
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": 500,
  "lineHeight": "$theme.typography.font350.lineHeight",
  "marginBottom": "$theme.sizing.scale300",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "$theme.sizing.scale300",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
}
`;

exports[`FormControl - Label and Caption for controls StyledLabel - basic render: StyledLabel has correct styles when compact and disabled 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "not-allowed",
  "display": "block",
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": 500,
  "lineHeight": "$theme.typography.font350.lineHeight",
  "marginBottom": "$theme.sizing.scale300",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "$theme.sizing.scale300",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
}
`;
